--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "core-js": "^2.5.4",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "keycloak-angular": "^6.1.0",
+    "ng2-charts": "^2.3.2",
     "ngx-spinner": "^7.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
